# E-Verify

./: .gitignore  CLAUDE.md  README.md  everify.spec  main.py  pyproject.toml  start_app.bat  templates.json  test_entities.txt
reports/: ~$控股集团有限公司 诚信核查.docx
scripts/: launcher.py  run_flask.py
src/everify/: main.py  web.py
src/everify/common/: __init__.py  file.py
src/everify/core/base/: browser.py  document.py  image.py
src/everify/core/data/: templates.json
src/everify/core/models/: __init__.py  auto_verify_operation.py  base_operation.py  manual_screenshot_operation.py  operation_factory.py  search_engine_query_operation.py
src/everify/core/operations/: __init__.py  auto_verify_operation.py  manual_screenshot_operation.py  operation_factory.py  search_engine_query_operation.py
src/everify/core/services/: entity_manager.py  report_generator.py  template_manager.py  url_generator.py  verify_service.py
src/everify/core/utils/: __init__.py  config.py  logger.py
src/everify/entrypoints/: __init__.py  entrypoints.py
src/everify/utils/: __init__.py
tests/: test_document_engine.py  test_entity_manager.py  test_template_manager.py  test_url_generator.py
web/: app.py
web/static/css/: style.css
web/static/js/: main.js
web/templates/: admin_templates.html  base.html  bribery_check.html  integrity_check.html
模板/: Hecha.py  MODEL.docx  document.py  新建 文本文档.txt
